# OnlineWellInterpretationBenchmark

./: .gitignore  LICENSE  README.md  Updated_app_ver_0_0_1.py  main.py  main_test.py  pyproject.toml
Data/: Notes.txt
Results/: donnees_canvas_2f19feb9-e207-44b0-9bf0-b5860e581e4d.json  form_2f19feb9-e207-44b0-9bf0-b5860e581e4d.json  lignes_graph.json  test.json
Versions/: Version_1_0__09_02_2026.py  app_ver_0_1_0.py
src/: main.py
tests_dependances/: test_dl_canvas.py  test_interactive_graphs.py  test_st_canvas.py
