[project]
name = "onlinewellloginterpretation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lasio>=0.32",
    "matplotlib>=3.10.7",
    "numpy>=1.26.4",
    "plotly>=6.3.1",
    "streamlit==1.28.0",
    "streamlit-drawable-canvas @ git+https://github.com/MateoENSG/streamlit-drawable-canvas-horizontalline",
    "uuid>=1.30",
]
